--- a/pipelane-marketing/package.json
+++ b/pipelane-marketing/package.json
@@ -11,13 +11,15 @@
     "build": "astro build",
     "preview": "astro preview",
     "lint": "eslint \"src/**/*.{ts,tsx,astro}\"",
-    "format": "prettier --cache --write \"**/*.{ts,tsx,astro,js,jsx,json,md,css}\""
+    "format": "prettier --cache --write \"**/*.{ts,tsx,astro,js,jsx,json,md,css}\"",
+    "preview:ci": "astro preview --host 127.0.0.1 --port 4321",
+    "test:a11y": "start-server-and-test preview:ci http://127.0.0.1:4321 \"pa11y-ci\"",
+    "test:lighthouse": "start-server-and-test preview:ci http://127.0.0.1:4321 \"lighthouse http://127.0.0.1:4321 --only-categories=accessibility --quiet --chrome-flags=\\\"--headless\\\" --score-threshold=0.95\""
   },
   "dependencies": {
-    "@astrojs/icon": "^1.1.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/inter": "^5.0.6",
-    "astro": "^4.7.0"
+    "astro": "^4.7.0",
+    "@fontsource-variable/inter": "^5.0.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -30,6 +32,9 @@
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "pa11y-ci": "^3.1.0",
+    "start-server-and-test": "^2.0.3",
+    "lighthouse": "^10.4.0"
   }
 }
