feat(api): add hunter module and cadence tooling

--- a/pipelane-api/.env.example
+++ b/pipelane-api/.env.example
@@ -25,3 +25,6 @@ AUTOMATIONS_EVENTS_URL=
 AUTOMATIONS_TOKEN=
 AUTOMATIONS_ACTIONS_ENABLED=false
 AUTOMATIONS_RATE_LIMIT_PER_MINUTE=300
+
+# Demo mode (enables POST /api/demo/run and UI banners)
+DEMO_MODE=false
