--- a/pipelane-api/src/Pipelane.Infrastructure/Pipelane.Infrastructure.csproj
+++ b/pipelane-api/src/Pipelane.Infrastructure/Pipelane.Infrastructure.csproj
@@ -20,5 +20,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.*" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.*" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.*" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.*" />
+    <PackageReference Include="QuestPDF" Version="2024.2.6" />
   </ItemGroup>
 </Project>
