feat(front): add hunter workspace and list flows

--- a/pipelane-front/.env.example
+++ b/pipelane-front/.env.example
@@ -2,5 +2,7 @@
 # Defaults are used when unset.
 
 # Base URL of the backend API
-API_BASE_URL=http://localhost:5000
+API_BASE_URL=http://localhost:56667
 
+# Enable console demo controls
+DEMO_MODE=false
