--- a/pipelane-marketing/package.json
+++ b/pipelane-marketing/package.json
@@ -17,9 +17,9 @@
     "test:lighthouse": "start-server-and-test preview:ci http://127.0.0.1:4321 \"lighthouse http://127.0.0.1:4321 --only-categories=accessibility --quiet --chrome-flags=\\\"--headless\\\" --score-threshold=0.95\""
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.7.0",
-    "@fontsource-variable/inter": "^5.0.6"
+    "@astrojs/tailwind": "^6.0.2",
+    "@fontsource-variable/inter": "^5.0.6",
+    "astro": "^5.15.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -29,12 +29,12 @@
     "eslint-plugin-astro": "^0.33.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-tailwindcss": "^3.14.0",
+    "lighthouse": "^10.4.0",
+    "pa11y-ci": "^3.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.4.5",
-    "pa11y-ci": "^3.1.0",
     "start-server-and-test": "^2.0.3",
-    "lighthouse": "^10.4.0"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.4.5"
   }
 }
