--- a/pipelane-api/Directory.Build.props
+++ b/pipelane-api/Directory.Build.props
@@ -1,9 +1,19 @@
 <Project>
   <PropertyGroup>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <AnalysisLevel>latest</AnalysisLevel>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <CodeAnalysisTreatWarningsAsErrors>false</CodeAnalysisTreatWarningsAsErrors>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <!-- Certaines règles StyleCop restent trop bruyantes dans le code existant.
+         On les documente ici afin de les traiter progressivement. -->
+    <NoWarn>SA0001;SA1009;SA1028;SA1101;SA1107;SA1111;SA1116;SA1117;SA1118;SA1122;SA1127;SA1128;SA1136;SA1137;SA1200;SA1201;SA1202;SA1204;SA1208;SA1210;SA1309;SA1316;SA1402;SA1407;SA1408;SA1413;SA1501;SA1502;SA1503;SA1508;SA1513;SA1515;SA1516;SA1518;SA1633;SA1649</NoWarn>
   </PropertyGroup>
-</Project>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" PrivateAssets="all" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556" PrivateAssets="all" />
+  </ItemGroup>
+</Project>
