--- a/pipelane-api/tests/Pipelane.Tests/Pipelane.Tests.csproj
+++ b/pipelane-api/tests/Pipelane.Tests/Pipelane.Tests.csproj
@@ -3,6 +3,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
+    <CollectCoverage>true</CollectCoverage>
+    <CoverletOutputFormat>cobertura,lcov</CoverletOutputFormat>
+    <CoverletOutput>$(MSBuildProjectDirectory)/../coverage/</CoverletOutput>
+    <Threshold>15</Threshold>
+    <ThresholdType>line</ThresholdType>
+    <ThresholdStat>Total</ThresholdStat>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
@@ -12,6 +18,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.*" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.*" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.*" />
+    <PackageReference Include="coverlet.msbuild" Version="6.*">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../../src/Pipelane.Application/Pipelane.Application.csproj" />
