--- a/pipelane-front/angular.json
+++ b/pipelane-front/angular.json
@@ -16,8 +16,8 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss"
@@ -67,4 +67,3 @@
     }
   }
 }
-
