--- a/pipelane-front/package.json
+++ b/pipelane-front/package.json
@@ -35,9 +35,7 @@
     "@angular/router": "^20.3.4",
     "angular-shepherd": "^20.0.0",
     "apexcharts": "^5.3.5",
-    "chart.js": "^4.4.0",
     "ng-apexcharts": "^2.0.3",
-    "ng2-charts": "^5.0.0",
     "rxjs": "^7.8.0",
     "zone.js": "~0.15.1"
   },
@@ -53,14 +51,20 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "cypress": "^13.13.0",
+    "depcheck": "^1.4.7",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsdoc": "^48.9.1",
+    "eslint-plugin-rxjs": "^5.0.3",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.0.3",
     "openapi-typescript": "^6.7.6",
     "prettier": "^3.3.3",
+    "sass": "^1.93.2",
     "ts-jest": "^29.2.5",
+    "ts-prune": "^0.10.3",
     "typescript": "~5.8.3"
   }
 }
