--- a/pipelane-marketing/package.json
+++ b/pipelane-marketing/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --cache --write \"**/*.{ts,tsx,astro,js,jsx,json,md,css}\"",
     "preview:ci": "astro preview --host 127.0.0.1 --port 4321",
     "test:a11y": "start-server-and-test preview:ci http://127.0.0.1:4321 \"pa11y-ci\"",
-    "test:lighthouse": "start-server-and-test preview:ci http://127.0.0.1:4321 \"lighthouse http://127.0.0.1:4321 --only-categories=accessibility --quiet --chrome-flags=\\\"--headless\\\" --score-threshold=0.95\""
+    "test:lighthouse": "start-server-and-test preview:ci http://127.0.0.1:4321 \"lighthouse http://127.0.0.1:4321 --only-categories=performance,accessibility --budgets-path=./lighthouserc.json --quiet --chrome-flags=\\\"--headless\\\" --score-threshold=0.95\"",
+    "ci:qa": "npm run test:a11y && npm run test:lighthouse"
   },
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
