feat: modern auth, command palette, and hunter map

--- a/pipelane-api/.env.example
+++ b/pipelane-api/.env.example
@@ -1,7 +1,7 @@
 # Backend environment variables (example)
 
 # SQL Server connection string (dev uses LocalDB if unset)
-DB_CONNECTION=Server=localhost\\SQLEXPRESS;Database=Pipelane;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true
+DB_CONNECTION=Server=localhost\SQLEXPRESS;Database=Pipelane;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true
 
 # Symmetric encryption key material (used to derive AES-GCM key)
 ENCRYPTION_KEY=change-me-strong-random
@@ -10,7 +10,9 @@ ENCRYPTION_KEY=change-me-strong-random
 JWT_KEY=change-me-strong-random
 
 # AI / OpenAI configuration
-OPENAI_API_KEY=
+OPEN_AI_KEY=
+# OPTIONAL LEGACY FALLBACK
+# OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 AI_DAILY_BUDGET_EUR=5
 
