--- a/pipelane-front/.env.example
+++ b/pipelane-front/.env.example
@@ -6,3 +6,6 @@ API_BASE_URL=http://localhost:56667
 
 # Enable console demo controls
 DEMO_MODE=false
+
+# Mapbox access token for Hunter map integration
+MAPBOX_TOKEN=
