--- a/pipelane-marketing/package.json
+++ b/pipelane-marketing/package.json
@@ -11,6 +11,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "lint": "eslint \"src/**/*.{ts,tsx,astro}\"",
+    "depcheck": "depcheck --skip-missing --ignores=@fontsource-variable/inter,autoprefixer,postcss,lighthouse,pa11y-ci,typescript,eslint-plugin-jsx-a11y,start-server-and-test,tailwindcss",
     "format": "prettier --cache --write \"**/*.{ts,tsx,astro,js,jsx,json,md,css}\"",
     "preview:ci": "astro preview --host 127.0.0.1 --port 4321",
     "test:a11y": "start-server-and-test preview:ci http://127.0.0.1:4321 \"pa11y-ci\"",
@@ -25,10 +26,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "depcheck": "^1.4.7",
+    "astro-eslint-parser": "^1.0.2",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.33.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.14.0",
     "lighthouse": "^10.4.0",
     "pa11y-ci": "^3.1.0",
